-
Bug
-
Resolution: Done
-
P2: Important
-
6.2.0 Beta1
-
None
-
-
dff7aaf7d20435f2418e6bb50df2238afff9835f (qt/qtdeclarative/dev) 4d89fe418a9713c14c62953424f389f88d4fe060 (qt/qtdeclarative/6.2)
Mac;
Configured in a fresh install with:
../configure --prefix=%CD%/qtbase -prefix $PWD/qtbase -debug-and-release -force-debug-info -separate-debug-info -c++std c++14 -qt-libjpeg -qt-libpng -qt-sqlite -nomake examples -nomake tests -no-xcb -no-glib -no-dbus -no-qml-debug -securetransport -no-openssl -DBUILD_qtquick3d=OFF -DBUILD_qtconnectivity=OFF -DBUILD_qtscript=OFF -DBUILD_qt3d=OFF -DBUILD_qtactiveqt=OFF -DBUILD_qtwebglplugin=OFF -DBUILD_qtquick3d=OFF -D_BUILD_qtspeech=OFF -D_BUILD_qtdoc=OFF -DBUILD_qtwebengine=OFF -DBUILD_qtwebchannel=OFF
(used 'ninja' to compile).
In file included from ../qtdeclarative/src/qml/qml/qqmlboundsignal.cpp:52: In file included from qtbase/include/QtQml/6.2.0/QtQml/private/qqmldebugserviceinterfaces_p.h:1: qtbase/include/QtQml/6.2.0/QtQml/private/../../../../../../../qtdeclarative/src/qml/debugger/qqmldebugserviceinterfaces_p.h:110:48: error: unknown type name 'TranslationBindingInformation' virtual void foundTranslationBinding(const TranslationBindingInformation &) {}
Windows:
D:\Qt\6.2.0\Src\debug_build>..\configure --prefix=%CD%/qtbase -cmake-generator Ninja -debug -force-debug-info -qt-libjpeg -qt-libpng -qt-sqlite -nomake examples -no-qml-debug -no-dbus -opengl desktop -openssl -I C:\dev\3pp\openssl\openssl-1.1.1g\include -DBUILD_qtquick3d=OFF -DBUILD_qtwebengine=OFF -DBUILD_qtwebchannel=OFF -DBUILD_qtconnectivity=OFF -DBUILD_qtscript=OFF -DBUILD_qt3d=OFF -DBUILD_qtactiveqt=OFF -DBUILD_qtwebglplugin=OFF -DBUILD_qtquick3d=OFF -D_BUILD_qtspeech=OFF -D_BUILD_qtdoc=OFF
D:\Qt\6.2.0\Src\debug_build\qtbase\include\QtQml\6.2.0\QtQml\private\../../../../../../../qtdeclarative/src/qml/debugger/qqmldebugserviceinterfaces_p.h(110): error C4430: missing type specifier - int assumed. Note: C++ does not support default-int D:\Qt\6.2.0\Src\debug_build\qtbase\include\QtQml\6.2.0\QtQml\private\../../../../../../../qtdeclarative/src/qml/debugger/qqmldebugserviceinterfaces_p.h(110): error C2143: syntax error: missing ',' before '&' [57/3200] Building CXX object qtdeclarative\src\qml\CMakeFiles\Qml.dir\qml_qmltyperegistrations.cpp.obj ninja: build stopped: subcommand failed.
(appears to be same error).
For Gerrit Dashboard: QTBUG-95162 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
359817,5 | QQmlDebugServiceInterfaces: Fix build when qml_debug is disabled | dev | qt/qtdeclarative | Status: MERGED | +2 | 0 |
360623,2 | QQmlDebugServiceInterfaces: Fix build when qml_debug is disabled | 6.2 | qt/qtdeclarative | Status: MERGED | +2 | 0 |