QQmlDebugServiceInterfaces: Fix build when qml_debug is disabled

Without the forward declaration, we don't know what
TranslationBindingInformation is in foundTranslationBinding(const
TranslationBindingInformation &).
Moreover, we not only need to check for the translation feature, but
also for the qml_debug feature before trying to use the
QQmlDebugTranslationService.

Pick-to: 6.2
Fixes: QTBUG-95162
Change-Id: I7bb100526a22d73637540729c51fa4cf1b148770
Reviewed-by: Andrei Golubev <andrei.golubev@qt.io>
Reviewed-by: Tim Jenssen <tim.jenssen@qt.io>
Reviewed-by: Qt CI Bot <qt_ci_bot@qt-project.org>