src/quick/items/qquicktext.cpp
@@ -1153,7 +1153,7 @@ QRectF QQuickTextPrivate::setupTextLayout(qreal *const baseline)
 
         elideLayout->setFont(layout.font());
         elideLayout->setTextOption(layout.textOption());
-#if QT_CONFIG(translation)
+#if QT_CONFIG(translation) && QT_CONFIG(qml_debug)
         if (QQmlDebugTranslationService *service
                      = QQmlDebugConnector::service<QQmlDebugTranslationService>()) {
             elideText = service->foundElidedText(q, layoutText, elideText);
